# Big-Data-Final-Project

./: README.md
111/: pyproject.toml
111/src/index_enhancement/: backtest.py  data.py  io.py  optimize.py  signals.py
111/src/index_enhancement_project.egg-info/: requires.txt
111/tests/: test_io.py  test_optimize.py  test_signals.py
notebooks/: Optimization_final_project.ipynb
scripts/: run_pipeline.py
src/index_enhancement/: __init__.py
src/index_enhancement_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_backtest.py  test_data.py
