[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "index-enhancement-project"
version = "0.1.0"
description = "Optimization-based index enhancement for S&P 500 stocks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "requests",
  "yfinance",
  "pyomo",
  "tqdm",
  "lxml",
  "html5lib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
